# opengl-boilerplate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/models/: sphere_phong.fbx
resources/shaders/: assimp_test.frag  assimp_test.vert  default.frag  default.vert  depth_test.frag  depth_test.vert  discard_transparent_texture.frag  greyscale.frag  kernel.frag  negative.frag  phong.frag  phong.vert  screen.vert  single_color.frag  skybox.frag  skybox.vert  skybox_reflection.frag  skybox_reflection.vert  skybox_refraction.frag  uniform_buffer_blue.frag  uniform_buffer_green.frag  uniform_buffer_green.vert  uniform_buffer_red.frag  uniform_buffer_yellow.frag  uniform_buffer_yellow.vert  unlit_alpha_texture.frag  unlit_texture.frag  weighted_greyscale.frag
shaders/: default.frag  default.vert
src/: app.cpp  app.h  assimp_test.cpp  assimp_test.h  config.h  file_to_string.h  main.cpp  opengl_debug.h  shader.cpp  shader.h  window.cpp  window.h
src/labs/: blending_lab.cpp  blending_lab.h  cubemap_lab.cpp  cubemap_lab.h  depth_testing_lab.cpp  depth_testing_lab.h  face_culling_lab.cpp  face_culling_lab.h  framebuffer_lab.cpp  framebuffer_lab.h  lab.cpp  lab.h  model_lab.cpp  model_lab.h  phong_lab.cpp  phong_lab.h  stencil_testing_lab.cpp  stencil_testing_lab.h  uniform_buffers_lab.cpp  uniform_buffers_lab.h  unlit_lab.cpp  unlit_lab.h
src/labs/framebuffer_lab/: fbl_render_texture_to_screen.cpp  fbl_render_texture_to_screen.h  fbl_render_texture_to_world.cpp  fbl_render_texture_to_world.h  framebuffer_lab.cpp  framebuffer_lab.h
src/labs/registry/: lab_registry.cpp  lab_registry.h
src/lib/: color.h  file_to_string.cpp  file_to_string.h  log.h  opengl_debug.h  random.h
src/objects/: cube.h  object.h  object_attribute.h  plane.h  primitive.cpp  primitive.h  quad.h  skybox.h
src/rendering/: camera.cpp  camera.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  new_texture.h  rendering.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  uniform_buffer.cpp  uniform_buffer.h  vertex.h  vertex_attribute.cpp  vertex_attribute.h
src/rendering/lights/: directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
src/system/: input.cpp  input.h  metrics.cpp  metrics.h  time.cpp  time.h  ui.cpp  ui.h  window.cpp  window.h
